Project

General

Profile

Actions

Bug #42691

closed

Bucket instance obj can't be removed after resharding completed

Added by zhang sw over 4 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic, nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

BucketInfoReshardUpdate will update the objv_tracker when setting resharding status. But the outside bucket_info's objv_tracker is not updated and remove_bucket_instance_info will fail.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #43575: mimic: Bucket instance obj can't be removed after resharding completedResolvedNathan CutlerActions
Copied to rgw - Backport #43576: nautilus: Bucket instance obj can't be removed after resharding completedResolvedNathan CutlerActions
Actions #2

Updated by Abhishek Lekshmanan over 4 years ago

  • Status changed from New to Pending Backport
  • Backport set to mimic, nautilus
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #43575: mimic: Bucket instance obj can't be removed after resharding completed added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #43576: nautilus: Bucket instance obj can't be removed after resharding completed added
Actions #5

Updated by Nathan Cutler about 4 years ago

  • Pull request ID set to 31483
Actions #6

Updated by Nathan Cutler about 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF