rgw: fix a bug that bucket instance obj can't be removed after resharding completed.

Fixes: https://tracker.ceph.com/issues/42691

Signed-off-by: zhang Shaowen <zhangshaowen@cmss.chinamobile.com>
(cherry picked from commit 03039d9630e65088b525e9637dfc6f8f2c0a2702)

Conflicts:
	src/rgw/rgw_reshard.cc
- in master, *store has type "rgw::sal::RGWRadosStore", while in nautilus
  it has type "RGWRados", but this line appears to be merely incidental
  to the patch